WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11080
REGRESSION: Incorrect vertical positioning of Safari status bar text
https://bugs.webkit.org/show_bug.cgi?id=11080
Summary
REGRESSION: Incorrect vertical positioning of Safari status bar text
mitz
Reported
2006-09-28 12:27:15 PDT
Open the URL and move the mouse over "foo" and "bar". Notice how the status bar text shifts up and down depending on whether the @ is present. Perhaps the fix for
bug 10819
needs to be refined.
Attachments
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2006-11-08 13:57:06 PST
radar 4826648
Darin Adler
Comment 2
2007-02-06 16:14:25 PST
Committed revision 19449.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug